--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,11 @@
       <li>git add . = untuk save semua file</li>
       <li>git commit -m = untuk menambahkan commit dalam github</li>
       <li>git branch -m = untuk membuat branch</li>
+      <li>git fetch = untuk mengetahui kode yg terupdate</li>
       <li>git remote add origin = untuk menambahkan link github kita</li>
       <li>git push = untuk mengupload hasil ke github</li>
+      <li>git clone = clone repository orang</li>
+      <li>git checkout = untuk keluar dari branch</li>
     </ul>
   </body>
 </html>
