--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,7 @@
       <li>git push = untuk mengupload hasil ke github</li>
       <li>git clone = clone repository orang</li>
       <li>git checkout = untuk keluar dari branch</li>
+      <li>git remote show origin = untuk melihat filenya ada dimana</li>
     </ul>
   </body>
 </html>
